# cow

./: .gitignore  README.md  pyproject.toml  setup.py
copyonwrite/: __init__.py  core.py
tests/: test_dict.py  test_list.py  test_set.py  test_str.py
